# Diffusion_project

./: CMakeLists.txt  DiffusionEnvironment.cc  DiffusionEnvironment.h  README.md  Test_example.ipynb  Test_example.py  Test_example2.py  Test_example3.py  example_usage.py  python_wrapper.cc  setup.py  square_grf_zero_bc.py
DeepONet/Supervised/: DataGenerator.py  DeepONet.py  create_train_dataset.py  helper_fun.py  main_fun.py  save_model.py
